# PhysiCell_Studio

./: README.md
PhysiCell-model-builder/: biobots.xml  biorobots  mymodel.xml  mymodel__DC_xmax_substrate2.xml  mymodel__no_DC_substrate2.xml  mymodel_sub1_xminmax_DC.xml  pred_prey  template
PhysiCell-model-builder-1.4/: README.md
PhysiCell-model-builder-1.4/output/: initial.xml  mymodel.xml  output00000000.xml  output00000001.xml  output00000001_cells.mat  output00000001_cells_physicell.mat  output00000001_microenvironment0.mat  output00000002.xml  output00000002_cells.mat  output00000002_cells_physicell.mat  output00000002_microenvironment0.mat  output00000003.xml  output00000003_cells.mat  output00000003_cells_physicell.mat  output00000003_microenvironment0.mat  output00000004.xml  output00000004_cells.mat  output00000004_cells_physicell.mat  output00000004_microenvironment0.mat  output00000005.xml  output00000005_cells.mat  output00000005_cells_physicell.mat  output00000005_microenvironment0.mat  output00000006.xml  output00000006_cells.mat  output00000006_cells_physicell.mat  output00000006_microenvironment0.mat  output00000007.xml  output00000007_cells.mat  output00000007_cells_physicell.mat  output00000007_microenvironment0.mat  output00000008.xml  output00000008_cells.mat  output00000008_cells_physicell.mat  output00000008_microenvironment0.mat  output00000009.xml  output00000009_cells.mat  output00000009_cells_physicell.mat  output00000009_microenvironment0.mat  output00000010.xml  (+11 more)
PhysiCell_1.9.1_cmake/: CMakeLists.txt  README.md  biobots.xml  main.cpp
PhysiCell_1.9.1_cmake/BioFVM/: BioFVM_microenvironment.cpp  BioFVM_solvers.cpp  CMakeLists.txt
PhysiCell_1.9.1_cmake/core/: CMakeLists.txt  PhysiCell_cell.cpp
PhysiCell_1.9.1_cmake/custom_modules/: mymodel.cpp
PhysiCell_1.9.1_cmake/modules/: CMakeLists.txt  PhysiCell_geometry.cpp
PhysiCell_v1.9.1/: CMakeLists.txt  make_lib.sh
(+80 files in other folders)
